--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
       <h1>Recipe Haven</h1>
       <p>put something here</p>
-      <p></p>
+      <p>recipe</p>
     </div>
   </body>
 </html>
