--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>Recipe Haven</h1>
       <p>put something here</p>
       <p>recipe</p>
+      <p>about</p>
     </div>
   </body>
 </html>
