--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <p>put something here</p>
       <p>recipe</p>
       <p>about</p>
+      <!-- put hamburger here -->
     </div>
   </body>
 </html>
