--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>Recipe Haven</h1>
       <h2>input</h2>
       <br />
+      new line
       <p>recipe</p>
       <p>about</p>
     </div>
