--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h2>input</h2>
       <br />
       new line
+      <!-- at this point i need to make progress with this project -->
       <p>recipe</p>
       <p>about</p>
     </div>
