--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Recipe Haven</h1>
       <h2>input</h2>
       <br />
-
+      new line
       <!-- at this point i need to make progress with this project -->
       <p>recipe</p>
       <p>about</p>
