--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>
       <p>blog</p>
       <nav>contact</nav>
-      <nav></nav>
+      <nav>profile</nav>
     </div>
   </body>
 </html>
