--- a/index.html
+++ b/index.html
@@ -4,21 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipe Haven</title>
+    <title>Recipe Haven || My Cookbook</title>
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
   </head>
   <body>
-    <div>
-      <h1>Recipe Haven</h1>
-      <h2>input</h2>
-      <p>recipe</p>
-      <p>about</p>
-    </div>
-    <div>
-      <p>blog</p>
-      <nav>contact</nav>
-      <nav>profile</nav>
-    </div>
+    <nav class="navbar">
+      <nav class="nav-center">
+        <div class="nav-header">
+          <a href="index.html" class="nav-logo">
+            RecipeHaven
+          </a>
+          <button class="btn nav-btn" type="button">
+            <i class="fas fa-align-justify"></i>
+          </button>
+        </div>
+        <div class="nav-links">
+          <a href="index.html" class="nav-link">home</a>
+          <a href="about.html" class="nav-link">about</a>
+          <a href="recipes.html" class="nav-link">recipes</a>
+          <a href="tags.html" class="nav-link">tags</a>
+          <div class="nav-link contact-link">
+            <a href="contact.html" class="btn">Reach out</a>
+          </div>
+        </div>
+      </nav>
+    </nav>
   </body>
 </html>
