--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="recipes.html" class="nav-link">recipes</a>
           <a href="tags.html" class="nav-link">tags</a>
           <div class="nav-link contact-link">
-            <a href="contact.html" class="btn">Reach out</a>
+            <a href="contact.html" class="btn">Contact</a>
           </div>
         </div>
       </nav>
